<fix>fix the layout problem after using bootstrap

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,5 +1,6 @@
 body{
   font-family: 'Noto Sans TC', STHeiti, PingFang, 'Microsoft JhengHei', sans-serif, Verdana, Charcoal;
+  
   a{
     text-decoration: none;
   }
@@ -11,4 +12,12 @@ body{
     background: #DB6A43;
     color: white;
   }
+}
+.gotrip-all-container{
+  width: 100vw;
+  height: 100vh;
+}
+body::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
 }
