--- a/app/javascript/stylesheets/layoutHeaderFooter.scss
+++ b/app/javascript/stylesheets/layoutHeaderFooter.scss
@@ -57,10 +57,10 @@
   }
   .header-in-nav{
     display: flex;
-    max-width: 270px;
+    max-width: 300px;
     min-width: 118px;
     box-shadow:4px 4px 4px rgba(38, 44, 76, 0.7);
-    .about{
+    .gotrip-about{
       margin-right: 60px;
     }
     .header-in-before-login{
@@ -70,15 +70,19 @@
   .header-in-after-login{
     display: flex;
     align-items: center;
+    background:linear-gradient(to top,#EEBC38,#f5da78 );
+    background: -webkit-linear-gradient(to top, #EEBC38,#f5da78);
     .user-show{
       display: flex;
       .user-info{
         line-height: 42px;
-        // background-color: white;
-        overflow : hidden;
-        text-overflow : ellipsis;
         font-size: 18px;
         font-weight: bold;
+        display : inline-block;
+        overflow : hidden;
+        text-overflow : ellipsis;
+        white-space : nowrap;
+        width : 230px;
       }
       img{
         margin: 1px 10px 1px 2px;
@@ -90,6 +94,8 @@
   }
   label:hover .header-in-after-login{
     color: #DB6A43;
+    cursor: pointer;
+    
   }
   #list-checked:checked ~ .header-in-after-list{
     display: block;
@@ -114,8 +120,7 @@
       color: #DB6A43;
     }
     .btn-mytrip{
-      height: 40px;
-      line-height: 40px;
+      padding: 17px 0;
       background-color: #262C4C;
       color: #EEBC38;
     }
@@ -127,7 +132,8 @@
 
 
 
-.footer{
+.gotrip-footer{
+  box-sizing: border-box;
   width: 100%;
   height: 20px;
   background-color: #EEBC38;
